ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/valid/07_record_function_return.lava
record Point(int x, int y);
Point make(int a, int b) {
  return new Point(a, b);
}
Point p = make(1, 2);
print(p.x);
