ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/34_invalid_global_var_record_name.lava
record Point(int x);
int Point = 1;
